<resources>
    <!-- Textos generales -->
    <string name="app_name">Temporis</string>
    <string name="title_profile">Usuario</string>
    <string name="title_home">Temporizadores</string>
    <string name="title_logout">Salir</string>
    <string name="title_notifications">Notificaciones</string>
    <color name="logo_background">#FFFBFD</color>

    <!-- Textos para el login -->
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login_email">Iniciar Sesión</string>
    <string name="login_google">Iniciar Sesión con Google</string>
    <string name="login_anonymous">Iniciar Sesión Anónima</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Inicia sesión o regístrate</string>
    <string name="action_sign_in_short">Iniciar sesiós</string>
    <string name="welcome">"Bienvenido!"</string>
    <string name="invalid_username">No es un usuario válido</string>
    <string name="invalid_password">La contraseña debe tener 5 carácteres o más</string>
    <string name="login_failed">"El inicio de sesión ha fallado"</string>
    <string name="title_activity_login">Login</string>

    <string name="editar">Editar</string>
    <string name="registrar">Registrame</string>
    <string name="usuario">Usuario</string>
    <string name="Contra">Contraseña</string>
    <string name="ConfirmarContra">Confirme Contraseña</string>
    <string name="ContraOlvidada">Olvidé mi contraseña</string>
    <string name="Registro">¿Aún no tienes cuenta?</string>
    <string name="Entrar">Entrar</string>
    <string name="EntrarGoogle">Entrar con Google</string>
    <string name="Recordar">Recordar contraseña</string>
    <string name="textoRestablecerContra">Introduce el email asociado a tu cuenta y te enviaremos un correo para cambiar restablecerla</string>
    <string name="enviar">Enviar</string>
    <string name="qr">Generar Codigo QR</string>
    <string name="Actualizar">Actualizar</string>
    <string name="descripcion">Tu Descripcion</string>
    <string name="mensaje_home">Bienvenido a tu aplicacion para reservar pistas de tenis</string>
    <string name="EntrarTwitter">Entra con Twitter</string>
    <string name="pistas">Pistas disponibles</string>
    <string name="pista_extra">Extras:</string>
    <string name="contrincante">Contrincante:</string>
    <string name="continuar">Continuar</string>
    <string name="inicio">Hora de inicio:</string>
    <string name="final_hora">Hora final:</string>
    <string name="precio">"Precio total: "</string>
    <string name="metodo">Métodos de pago:</string>
    <string name="pago">Visa/MasterCard</string>
    <string name="tarjeta">Numero de tarjeta</string>
    <string name="csv">csv</string>
    <string name="fecha_validez">Fecha validez</string>
    <string name="pagar">Pagar</string>
    <string name="paypal">PayPal</string>

    <!-- Textos para el registro -->
    <string name="name">Nombre</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="register">Registrarse</string>

    <!-- Firebase -->
    <string name="default_web_client_id">636050813149-6fnav2v1b8tfnnbjhpfvp937bp477r2a.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prefs_file" />
</resources>